--- a/main.html
+++ b/main.html
@@ -10,7 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table border="1">
+	<thead>
+		<tr>
+			<th>roll number</th>
+			<th>name</th>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td>Aniket</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Akshay</td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td>Rohan</td>
+		</tr>
+	</thead>
+</table>
 </body>
 
 </html>
