--- a/main.html
+++ b/main.html
@@ -16,6 +16,8 @@
 			<th>roll number</th>
 			<th>name</th>
 		</tr>
+	</thead>
+	<tbody>
 		<tr>
 			<td>1</td>
 			<td>Aniket</td>
@@ -28,7 +30,7 @@
 			<td>3</td>
 			<td>Rohan</td>
 		</tr>
-	</thead>
+	</tbody>
 </table>
 </body>
 
